kubernetes/apps/business-ha-production/cb-ha/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ha-home
  namespace: business-ha-production
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: ha-home
    app.kubernetes.io/part-of: business-ha
  ports:
  - name: app
    port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: ha-home-origin
  namespace: business-ha-production
spec:
  selector:
    app.kubernetes.io/name: ha-home
  ports:
  - name: http
    port: 18091
    targetPort: 18091
