kubernetes/apps/business-ha-production/cb-ha/app/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ha-home-origin
  namespace: business-ha-production
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
  - name: envoy-external
    namespace: network
  hostnames:
  - ${CB_PROD_HOME_FQDN}
  rules:
  - backendRefs:
    - name: ha-home-origin
      port: 18091
